--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,5 +29,16 @@ services:
       - ./db/init:/docker-entrypoint-initdb.d
     ports:
       - "5432:5432"
+  app:
+    container_name: cmdb-app
+    depends_on:
+      - db
+      - api
+    build: ./app
+    restart: always
+    volumes:
+      - ./app:/app
+    ports:
+      - "8080:8080"
 volumes:
   postgres-db-data:
