--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -8,7 +8,7 @@ idna==3.3
 mypy-extensions==0.4.3
 pathspec==0.9.0
 platformdirs==2.5.2
-psycopg2-binary==2.9.3
+psycopg2==2.9.3
 pydantic==1.9.1
 sniffio==1.2.0
 SQLAlchemy==1.4.39
