--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,22 +1,21 @@
 FROM node:lts-alpine
 
 # install simple http server for serving static content
-RUN npm install -g http-server
+RUN npm install -g live-server
 
 # make the 'app' folder the current working directory
 WORKDIR /app
 
 # copy both 'package.json' and 'package-lock.json' (if available)
-COPY package*.json ./
+# COPY package*.json ./
 
 # install project dependencies
-RUN npm install
+# RUN npm install
 
 # copy project files and folders to the current working directory (i.e. 'app' folder)
-COPY . .
+# COPY . .
 
 # build app for production with minification
-RUN npm run build
+# RUN npm run build
 
-EXPOSE 8080
-CMD [ "http-server", "dist" ]
+CMD [ "live-server", "--host=0.0.0.0", "--port=8080", "--no-browser", "--cors" ]
