--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,16 @@
 version: '3.1'
 services:
+  app:
+    container_name: cmdb-app
+    depends_on:
+      - db
+      - api
+    build: ./app
+    restart: always
+    volumes:
+      - ./app:/app
+    ports:
+      - "8080:8080"
   api:
     container_name: cmdb-api
     depends_on:
