Starting vue cli

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,7 +1,7 @@
 FROM node:lts-alpine
 
 # install simple http server for serving static content
-RUN npm install -g live-server
+RUN npm install -g serve
 
 # make the 'app' folder the current working directory
 WORKDIR /app
@@ -10,12 +10,12 @@ WORKDIR /app
 # COPY package*.json ./
 
 # install project dependencies
-# RUN npm install
+RUN npm install
 
 # copy project files and folders to the current working directory (i.e. 'app' folder)
 # COPY . .
 
 # build app for production with minification
-# RUN npm run build
+RUN npm run build
 
-CMD [ "live-server", "--host=0.0.0.0", "--port=8080", "--no-browser", "--cors" ]
+CMD [ "serve -s dist -p 8080" ]
