--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -7,15 +7,15 @@ RUN npm install -g serve
 WORKDIR /app
 
 # copy both 'package.json' and 'package-lock.json' (if available)
-# COPY package*.json ./
+COPY package*.json ./
 
 # install project dependencies
 RUN npm install
 
 # copy project files and folders to the current working directory (i.e. 'app' folder)
-# COPY . .
+COPY . /app
 
 # build app for production with minification
 RUN npm run build
 
-CMD [ "serve -s dist -p 8080" ]
+CMD [ "serve", "-s", "dist" ]
