--- a/app/package.json
+++ b/app/package.json
@@ -11,7 +11,8 @@
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
     "serve": "^14.0.1",
-    "vue": "^3.2.13"
+    "vue": "^3.2.13",
+    "vue-cli": "^2.9.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
