--- a/api/Dockerfile.dev
+++ b/api/Dockerfile.dev
@@ -1,6 +1,7 @@
 FROM python:3.10
 
-ENV API_PORT $API_PORT
+ENV DB_USERNAME DB_USERNAME
+ENV DB_PASSWORD DB_PASSWORD
 
 WORKDIR /api
 
@@ -8,6 +9,6 @@ COPY ./requirements.txt /api/requirements.txt
 
 RUN pip install --no-cache-dir --upgrade -r /api/requirements.txt
 
-COPY . /api
+COPY ./main.py /api
 
 CMD [ "uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000", "--reload" ]
