--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
     container_name: cmdb-api
     depends_on:
       - db
-    build: ./api
+    build: ./api/Dockerfile.dev
     environment:
       API_USERNAME: "${API_USERNAME}"
       API_PASSWORD: "${API_PASSWORD}"
@@ -40,16 +40,5 @@ services:
       - ./db/init:/docker-entrypoint-initdb.d
     ports:
       - "5432:5432"
-  # app:
-  #   container_name: cmdb-app
-  #   depends_on:
-  #     - db
-  #     - api
-  #   build: ./app
-  #   restart: always
-  #   volumes:
-  #     - ./app:/app
-  #   ports:
-  #     - "8080:8080"
 volumes:
   postgres-db-data:
