--- a/app/Dockerfile.dev
+++ b/app/Dockerfile.dev
@@ -2,6 +2,7 @@ FROM node:lts-alpine
 
 # install simple http server for serving static content
 # RUN npm install -g serve
+ENV NODE_ENV dev
 
 # make the 'app' folder the current working directory
 WORKDIR /app
